# lsctf

./: CTFPATH.hs  LICENSE  LSCTF.hs  README  Util.hs  lsctf.cabal
